<!--
    * FILE          : strings.xml
    * PROJECT       : PROG3150 - Assignment #1 - Trip Planner
    * FIRST VERSION : 2022-01-27
    * PROGRAMMER    : N/A
    * DESCRIPTION   : String definitions.
-->
<resources>
    <string name="app_name">SET Trip Planner</string>
    <string name="originStr">Origin</string>
    <string name="destinationStr">Destination</string>
    <string name="titleStr">SET Trip Planner</string>
    <string name="nextScreenButtonStr"><![CDATA[>]]></string>
    <string name="peopleStr"># of Trip Goers</string>
    <string name="switchStr">First Class</string>
    <string name="indTicketPriceTextStr">Individual Ticket Price</string>
    <string name="totalTicketPriceTextStr">Total Ticket Price</string>
    <string name="nightsStr">Number of Nights</string>
    <string name="hotelCostTextStr">Hotel Cost</string>
    <string name="reviewTripStr">Review Trip</string>
    <string name="hotelCostPerNightTextStr">Hotel Cost / Night</string>
    <string name="totalCostTextStr">Total Trip Cost</string>
    <string name="orderTripButtonStr">Let\'s Go!</string>
    <string name="cancelTripOrderButtonStr">Cancel Order</string>
    <string name="confirmationStr">Thank you for planning your trip with us!</string>
    <string name="nextTripButtonStr">Plan Another Trip!</string>
    <string name="sendTripButtonStr">Send Trip to a Contact!</string>
    <string name="selectContactStr">Select a Contact From the Dropdown List Below</string>
    <string name="sendButtonStr">Send</string>
    <string name="goBackButtonStr">Go Back</string>
    <string name="refreshContactButtonStr">Refresh Contact List</string>
    <string name="main">Main</string>
    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>
    <string name="checkout">Checkout</string>
    <string name="amenities">Amenities</string>
    <string name="premium_bedding">Premium Bedding</string>
    <string name="champagne_bar">Champagne Bar</string>
    <string name="poseidon_jacuzzi">Poseidon Jacuzzi</string>
    <string name="available_premium_amenities">Add Premium Amenities</string>
    <string name="view_hotel">View Hotel</string>
    <string-array name="placesArray">
        <item>Toronto</item>
        <item>Calgary</item>
        <item>Vancouver</item>
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Miami</item>
        <item>Seoul</item>
        <item>Paris</item>
    </string-array>
    <string-array name="hotelArray">
        <item>Hotel A - $100 / Night</item>
        <item>Hotel B - $250 / Night</item>
        <item>Hotel C - $500 / Night</item>
    </string-array>
    <string-array name="hotelArrayValues">
        <item>100.00</item>
        <item>250.00</item>
        <item>500.00</item>
    </string-array>
    <string name="createReceiptStr">Create Receipt!</string>
    <string name="view_map">View Destination Attraction Map</string>
    <string name="hotel_info">Hotel Info</string>
    <string name="current_trip">Current Trip</string>
    <string name="nights">Nights</string>
    <string name="destination">Destination</string>
</resources>