<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewTripActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviewTripStr"
                android:layout_margin="12dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/reviewOriginTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/originStr"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/reviewOriginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/reviewDestinationTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/destinationStr"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/reviewDestinationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:id="@+id/divider6"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/numberOfNightsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nightsStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewNumNightsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hotelCostPerNightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotelCostPerNightTextStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewHotelCostNightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/hotelCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/hotelCostTextStr"/>
                <TextView
                    android:id="@+id/reviewHotelCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peopleStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewNumPeopleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indTicketPriceTextStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewIndTicketPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalTicketPriceTextStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewTotalTicketPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/amenitiesCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Amenities Cost"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewAmenitiesCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/totalCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalCostTextStr"
                    android:layout_margin="8dp"/>
                <TextView
                    android:id="@+id/reviewTotalCostTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>
            </LinearLayout>
            <View
                android:id="@+id/divider5"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/orderTripButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderTripButtonStr"
                    android:layout_margin="24dp"/>
                <Button
                    android:id="@+id/cancelTripOrderButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelTripOrderButtonStr"
                    android:layout_margin="24dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>