<?xml version="1.0" encoding="utf-8"?>
<!-- ref: https://www.youtube.com/watch?v=xGQJg31TPtU -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6000000"
    android:textAlignment="viewStart">

    <TextView
        android:id="@+id/destWidgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/nightsWidgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="259dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/widgetTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:background="@color/cardview_shadow_start_color"
        android:fontFamily="sans-serif-black"
        android:text="@string/current_trip"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/destLabelWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:fontFamily="sans-serif"
        android:text="@string/destination"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/nightsLabelWidget"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/nights"
        android:textColor="#FFFFFF" />


</RelativeLayout>